--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
     implementation "org.greenrobot:eventbus:3.2.0"
 
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
