--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.compsol.appsol.pegaservico">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".PegaServicoApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PegaServico">
+
         <activity
-            android:name=".ui.login.LoginActivity2"
+            android:name=".login.ui.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_login2" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
+            android:noHistory="true"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".MainActivity"
@@ -27,6 +29,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".FirebaseService.MyFirebaseMessagingService"
+            android:stopWithTask="false">
+
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
