--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:noHistory="true"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".MainActivity"
+            android:name=".main.ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".FirebaseService.MyFirebaseMessagingService"
+            android:name=".firebaseservice.MyFirebaseMessagingService"
             android:stopWithTask="false">
 
             <intent-filter>
