--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,12 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
 
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    implementation "de.hdodenhof:circleimageview:3.1.0"
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
