--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
     repositories {
         // Check that you have the following line (if not, add it):(https://console.firebase.google.com/project/pegaservico/overview)
         google()  // Google's Maven repository
-
+        mavenCentral()
     }
 }
 
