--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
 
     implementation "de.hdodenhof:circleimageview:3.1.0"
 
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
