Codigo de envio do servico para firebase na Servicoactivity implementado

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
 
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 
+    implementation 'com.cottacush:CurrencyEditText:0.0.9'
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
